--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                     <img src="./images/illustration-your-users.svg" alt="img-your">
                 </section>
             </div>
+            <section class="call-to-action">
+                <h2>Ready To Build Your Community?</h2>
+                <button class="btn btn-pink">Get Started For Free</button>
+            </section>
+            <!-- /.call-to-action -->
         </main>
         <!-- /.main -->
         <footer>
@@ -68,8 +73,9 @@
                 <div class="content">
                     <div class="content__info">
                         <ul>
-                            <li class="location">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                tempor incididunt ut labore et dolore magna aliqua</li>
+                            <li class="location"><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                    sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua</a></li>
                             <li class="phone"><a href="tel:+15431234567">+1-543-123-4567</a></li>
                             <li class="email"><a href="mailto:example@huddle.com">example@huddle.com</a></li>
                         </ul>
@@ -90,7 +96,7 @@
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
-            </div>            
+            </div>
             <span>&copy; Copyright 2018 Huddle. All rights reserved.</span>
         </footer>
         <!-- /.footer -->
