--- a/index.html
+++ b/index.html
@@ -95,9 +95,14 @@
                     </div>
                 </div>
             </div>
-            <span>&copy; Copyright 2018 Huddle. All rights reserved.</span>
+            <span>&copy; Copyright 2018 Huddle. All rights reserved.</span>            
         </footer>
         <!-- /.footer -->
+        <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="#">EvgiSs</a>.
+        </p>
+    </div>
 </body>
 
 </html>
