--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- /.footer -->
         <p class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-            Coded by <a href="#">EvgiSs</a>.
+            Coded by <a href="https://github.com/EugiSs">EugiSs</a>.
         </p>
     </div>
 </body>
